# MisogiAi-RAG-SQL-Agents

./: README.md
q1_rag_vs_sqlAgent/: README.md  SUMMARY.md  env_template.txt  requirements.txt
q1_rag_vs_sqlAgent/config/: database.py  settings.py
q1_rag_vs_sqlAgent/data/: sample_data.py  setup_database.py
q1_rag_vs_sqlAgent/demo/: cli_app.py  web_app.py
q1_rag_vs_sqlAgent/evaluation/: benchmark.py  metrics.py  test_queries.py
q1_rag_vs_sqlAgent/models/: schema.py
q1_rag_vs_sqlAgent/reports/: performance_results.md  technical_comparison.md
q1_rag_vs_sqlAgent/systems/: base_system.py  rag_system.py  sql_agent_system.py
q2_quick_commerce_deals/: Dockerfile  README.md  docker-compose.yml  env.example  init.sql  nginx.conf  prometheus.yml  pyproject.toml  start.sh
q2_quick_commerce_deals/grafana/dashboards/: price-comparison.json
q2_quick_commerce_deals/price_comparison/: __init__.py  main.py
q2_quick_commerce_deals/price_comparison/agents/: __init__.py  sql_agent.py
q2_quick_commerce_deals/price_comparison/api/: __init__.py
q2_quick_commerce_deals/price_comparison/api/v1/: __init__.py  router.py
q2_quick_commerce_deals/price_comparison/api/v1/endpoints/: __init__.py  analytics.py  auth.py  monitoring.py  platforms.py  products.py  query.py  users.py
q2_quick_commerce_deals/price_comparison/core/: __init__.py  config.py  logging.py
q2_quick_commerce_deals/price_comparison/database/: __init__.py  base.py
q2_quick_commerce_deals/price_comparison/database/models/: __init__.py  analytics.py  availability.py  core.py  integrations.py  monitoring.py  platforms.py  pricing.py  users.py
q2_quick_commerce_deals/price_comparison/services/: __init__.py  analytics_service.py  cache_service.py  monitoring_service.py  platform_service.py  product_service.py  query_service.py
